# stm32wb55-examples

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
examples/: bme280_i2c.rs  i2c_scan.rs  ibeacon.rs  ssd1306.rs
src/: main.rs
