[package]
name = "stm32wb55-examples"
version = "0.1.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6.15"
stm32wb-hal = { version = "0.1.14", features = ["xG-package", "rt"] }
cortex-m-semihosting = "0.5.0"
panic-probe = "0.3.2"



# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"

[dev-dependencies]
embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
bme280 = "0.3.0"
